SG-2004-11-12-0: Bugfix:    the scheduler made reservations for queues in an
                            unknown state or disabled state. (SG-2004-10-27-0)
                 Review:    AH
                 Changed:   scheduler

JG-2004-11-12-0: Testsuite: performance/throughput: Added scenario with 
                            resource reservation.
                            Fixed test system_tests/clients/qmake.
                            Fixed reset_schedd_config

CR-2004-11-11-0: Bugfix:    sgemaster -migrate on qmaster host starts second 
                            qmaster
                 Issue:     1329, 1325
                 Bugtraq:   6194002
                 Changed:   sgemaster startup script
                 Review:    AS

JG-2004-11-11-0: Bugfix:    Fixed memory access and uninitialized erros in
                            qmaster.
                 Review:    DT
                 Testsuite: Minor fixes.

CR-2004-11-10-1: Bugfix:    sgemaster -shadowd did not start shadowd if
                            no shadowd pid file exist.
                 Review:    AA
                 Changed:   sgemaster_template

CR-2004-11-10-0: Testsuite: - fixed remote loggin problem on slow
                              hosts
                            - increased timeout for csp key installation
                              at execd installation

AA-2004-11-10-0: Bugfix:    - negative ticket values
                            - default user display in sharetree
                 Issue:     1318 
                 Changed:   qmon
                 Review:    SG
                            
AH-2004-11-10-0: Enhancm.:  Improved shepherd diagnosis
                 Review:    HP

JG-2004-11-10-0: Bugfix:    Fixed memory leaks in qmaster.
                 Review:    EB
                 Testsuite: Minor fixes.

AA-2004-11-09-0: Bugfix:    openssl-0.9.7e broke sge_ssl_template.cnf
                            configuration file parsing changed