@@ -119,6 +119,7 @@ extern bool set_grd_environment;
 extern bool set_cod_environment;
 extern int scheduler_timeout;
 extern int max_dynamic_event_clients;
+extern int spool_time;
 
 /* reporting params */
 extern bool do_accounting;
