@@ -1,3 +1,7 @@
+SG-2004-11-12-1: Bugfix:    added a qmaster param to set a sharetree spool time
+                 Review:    DT
+                 Changed:   qmaster
+
 SG-2004-11-12-0: Bugfix:    the scheduler made reservations for queues in an
                             unknown state or disabled state. (SG-2004-10-27-0)
                  Review:    AH
